fixed index view to show tag list

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -12,7 +12,7 @@
     <td><%=h item.done %></td>
     <td><%=h item.title %></td>
     <td>
-      <% item.tag_list do |tag| %>
+      <% item.tag_list.each do |tag| %>
         <%=h tag %>
       <% end %>
     </td>
