--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -15,7 +15,7 @@
     <td><%=h item.title %></td>
     <td>
       <% item.tag_list.each do |tag| %>
-        <%=h tag %>
+        <%= link_to_tag(tag) %>
       <% end %>
     </td>
     <td><%= link_to "編集", edit_item_path(item) %></td>
